--- a/cadastroLivro/styleCadLivro.css
+++ b/cadastroLivro/styleCadLivro.css
@@ -3,18 +3,18 @@ body {
     position: relative;
     height: 100%;
     width: 100%;
-    background: url(img/background.png);
+    background: url(/Biblio/img/background.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .nav-superior {
-    justify-content: space-between; 
+    justify-content: space-between;
 }
 
-#header {
+#nitro {
     background-color: #0d3257;
-    padding-top: 5px; 
+    padding-top: 5px;
     display: flex;
 }
 
@@ -40,9 +40,9 @@ div.logo {
     width: 30px;
 }
 
-.nav-item { 
+.nav-item {
     background-color: #f44926;
-    border-radius: 15px; 
+    border-radius: 15px;
     color: white;
     text-align: center;
     margin: 0 5px;
@@ -70,6 +70,7 @@ a:hover {
 .navbar-itens {
     justify-content: center;
 }
+
 
 /*.fundo_conteudo {
     background-color: #143e68c2;
@@ -174,54 +175,53 @@ footer {
         transform: rotate(-135deg);
         top: -7px;
     }
-
-
-    
 }
 
-.conteudo{
+.conteudo {
     color: white;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-  }
-  
-  body {
+}
+
+body {
     font-family: 'Nunito', sans-serif;
     color: #384047;
-  }
-  
-  form {
+}
+
+form {
     max-width: 300px;
     margin: 10px auto;
     padding: 10px 20px;
     background: #0d3257;
     border-radius: 8px;
-  }
-  
-  h1 {
+}
+
+h1 {
     margin: 0 0 30px 0;
     text-align: center;
-  }
-  
-  input[type="text"],
-  input[type="password"],
-  input[type="file"],
-  input[type="date"],
-  input[type="datetime"],
-  input[type="email"],
-  input[type="number"],
-  input[type="search"],
-  input[type="tel"],
-  input[type="time"],
-  input[type="url"],
-  input[type="matricula"],
-  textarea,
-  select {
-    background: rgba(255,255,255,0.1);
+}
+
+input[type="text"],
+input[type="password"],
+input[type="file"],
+input[type="date"],
+input[type="datetime"],
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="time"],
+input[type="url"],
+input[type="matricula"],
+textarea,
+select {
+    background: rgba(255, 255, 255, 0.1);
     border: none;
     font-size: 16px;
     height: auto;
@@ -231,22 +231,22 @@ footer {
     width: 100%;
     background-color: #e8eeef;
     color: #8a97a0;
-    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 30px;
-  }
-  
-  input[type="radio"],
-  input[type="checkbox"] {
+}
+
+input[type="radio"],
+input[type="checkbox"] {
     margin: 0 4px 8px 0;
-  }
-  
-  select {
+}
+
+select {
     padding: 6px;
     height: 32px;
     border-radius: 2px;
-  }
-  
-  .botton-criar{
+}
+
+.botton-criar {
     padding: 19px 39px 18px 39px;
     color: #FFF;
     background-color: #f44926;
@@ -257,31 +257,31 @@ footer {
     width: 100%;
     border: 1px solid #d82703;
     border-width: 1px 1px 3px;
-    box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
     margin-bottom: 10px;
-  }
-  
-  fieldset {
+}
+
+fieldset {
     margin-bottom: 30px;
     border: none;
-  }
-  
-  legend {
+}
+
+legend {
     font-size: 1.4em;
     margin-bottom: 10px;
-  }
-  
-  label {
+}
+
+label {
     display: block;
     margin-bottom: 8px;
-  }
-  
-  label.light {
+}
+
+label.light {
     font-weight: 300;
     display: inline;
-  }
-  
-  .number {
+}
+
+.number {
     background-color: #f44926;
     color: #fff;
     height: 30px;
@@ -291,14 +291,12 @@ footer {
     margin-right: 4px;
     line-height: 30px;
     text-align: center;
-    text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
     border-radius: 100%;
-  }
-  
-  @media screen and (min-width: 480px) {
-  
+}
+
+@media screen and (min-width: 480px) {
     form {
-      max-width: 480px;
+        max-width: 480px;
     }
-  
-  }
+}
